<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_name_ru"
        android:textColor="@color/textColor"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/btnFullTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:text="@string/FullTimeRu"
        android:textColor="@color/whiteOn"
        android:textOff="@string/FullTimeRu"
        android:textOn="@string/FullTimeRu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPartTime" />

    <ToggleButton
        android:id="@+id/btnPartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:text="@string/PartTimeRu"
        android:textColor="@color/whiteOn"
        android:textOff="@string/PartTimeRu"
        android:textOn="@string/PartTimeRu"
        app:layout_constraintEnd_toStartOf="@+id/btnSession"
        app:layout_constraintStart_toEndOf="@+id/btnFullTime"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ToggleButton
        android:id="@+id/btnSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:onClick="onClick"
        android:text="@string/SessionRu"
        android:textColor="@color/whiteOn"
        android:textOff="@string/SessionRu"
        android:textOn="@string/SessionRu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPartTime" />

    <TextView
        android:id="@+id/courceSpinnerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/CourseSpinnerNameRu"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPartTime" />

    <Spinner
        android:id="@+id/courceSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/courceSpinnerName"
        app:layout_constraintTop_toBottomOf="@+id/courceSpinnerName" />

    <TextView
        android:id="@+id/universitySpinnerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/UniversitySpinnerNameRu"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courceSpinner" />

    <Spinner
        android:id="@+id/universitySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/universitySpinnerName"
        app:layout_constraintTop_toBottomOf="@+id/universitySpinnerName" />

    <TextView
        android:id="@+id/groupSpinnerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/GroupSpinnerNameRu"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/universitySpinner" />

    <Spinner
        android:id="@+id/groupSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/groupSpinnerName"
        app:layout_constraintTop_toBottomOf="@+id/groupSpinnerName" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="Далее"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>