<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    tools:context=".SignOn.SignOnPage1">

    <ToggleButton
        android:id="@+id/btnFullTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@android:color/transparent"
        android:text="@string/FullTimeRu"
        android:textColor="@color/whiteOn"
        android:textOff="@string/FullTimeRu"
        android:textOn="@string/FullTimeRu"
        app:layout_constraintBottom_toBottomOf="@+id/btnPartTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPartTime" />

    <ToggleButton
        android:id="@+id/btnPartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/PartTimeRu"
        android:textColor="@color/whiteOn"
        android:textOff="@string/PartTimeRu"
        android:textOn="@string/PartTimeRu"
        app:layout_constraintEnd_toStartOf="@+id/btnSession"
        app:layout_constraintStart_toEndOf="@+id/btnFullTime"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/btnSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:text="@string/SessionRu"
        android:textColor="@color/whiteOn"
        android:textOff="@string/SessionRu"
        android:textOn="@string/SessionRu"
        app:layout_constraintBottom_toBottomOf="@+id/btnPartTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPartTime" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/institute_list_background"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPartTime">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            tools:listitem="@layout/institute_item"/>

    </FrameLayout>

    <ProgressBar
        android:id="@+id/bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="@+id/frame"
        app:layout_constraintStart_toStartOf="@+id/frame"
        app:layout_constraintTop_toTopOf="@+id/frame" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        android:text="Далее"
        android:textColor="@color/btn_next_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>